fix syntax errors
